--- a/style.css
+++ b/style.css
@@ -13,6 +13,20 @@ body {
     background-size: cover;
 }
 
+.titulo {
+    position: absolute;
+    top: 10px;
+    font-size: 2rem;
+    color: rgb(16, 64, 10);
+  font-family: "Gochi Hand", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+img {
+    border-radius: 10px;
+}
+
 .box {
     position: relative;
     width: 200px;
